# wine-service

.github/workflows/: ci.yml  pull_request.yml
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
