[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1"}
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.22.0", features = ["full"] }
tower = { version = "0.4.13", features=['util'] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
